Bug 466406 - In plasma wayland session, clipboard action menu has a title bar
Summary: In plasma wayland session, clipboard action menu has a title bar
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 5.27.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2023-02-25 13:35 UTC by Rocket Aaron
Modified: 2023-03-06 10:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.3
Sentry Crash Report:


Attachments
Clipboard action menu with title bar above it (43.30 KB, image/png)
2023-02-25 13:35 UTC, Rocket Aaron
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rocket Aaron 2023-02-25 13:35:57 UTC
Created attachment 156709 [details]
Clipboard action menu with title bar above it

SUMMARY
In plasma wayland session, clipboard action menu has a title bar above it, but on Xorg it doesn't.

STEPS TO REPRODUCE
1. Click "Clipboard" icon on systray to open it's popup, then click "Configure Clipboard..." to open it's settings dialog
2. In "Action Menu" section, make sure "Include MIME actions" is checked
3. Copy some URL, like https://bugs.kde.org/ , then press Meta+Ctrl+R to open the action menu

OBSERVED RESULT
Clipboard action menu has a title bar above it

EXPECTED RESULT
No title bar above the menu

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
(available in About System)
KDE Plasma Version: 5.27.1
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8+kde+r181-1

ADDITIONAL INFORMATION
This also happens when clipboard action menu automatically popups up on certain clipboard content.
Comment 1 Nicolas Fella 2023-02-25 16:03:18 UTC
David, this probably needs the same treatment as the other popup (https://invent.kde.org/plasma/plasma-workspace/-/commit/338772ca404e35ee54d98ba6c8c8f5b9224b6d0f)?
Comment 2 Bug Janitor Service 2023-03-03 15:21:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2706
Comment 3 David Redondo 2023-03-06 09:56:52 UTC
Git commit ea1bb46a6624f3588691b1026f14b46b1e916d38 by David Redondo.
Committed on 06/03/2023 at 09:40.
Pushed by davidre into branch 'master'.

klipper: Make action menu Frameless

It already goes through the showPopupMenu code path so opens correctly
under the cursor but has an unwanted titlebar.
FIXED-IN:5.27.3

M  +1    -0    klipper/urlgrabber.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/ea1bb46a6624f3588691b1026f14b46b1e916d38
Comment 4 David Redondo 2023-03-06 10:15:13 UTC
Git commit c1f07ffd30c8df263917d1fbd92ba1f36d7765c0 by David Redondo.
Committed on 06/03/2023 at 09:57.
Pushed by davidedmundson into branch 'Plasma/5.27'.

klipper: Make action menu Frameless

It already goes through the showPopupMenu code path so opens correctly
under the cursor but has an unwanted titlebar.
FIXED-IN:5.27.3


(cherry picked from commit ea1bb46a6624f3588691b1026f14b46b1e916d38)

M  +1    -0    klipper/urlgrabber.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/c1f07ffd30c8df263917d1fbd92ba1f36d7765c0