klipper: Make action menu Frameless

It already goes through the showPopupMenu code path so opens correctly
under the cursor but has an unwanted titlebar.
BUG:466406
FIXED-IN:5.27.3


(cherry picked from commit ea1bb46a6624f3588691b1026f14b46b1e916d38)